Ensure card-body has max-height and overflow hidden

--- a/app/assets/stylesheets/search_location.scss
+++ b/app/assets/stylesheets/search_location.scss
@@ -12,6 +12,13 @@ a.location-search-result-link {
   }
 }
 
+.location-card {
+  .card-body {
+    max-height: 200px;
+    overflow: hidden;
+  }
+}
+
 .review-summary-row {
   display: flex;
   color: $primary;
